# qc-instances

./: .gitignore  .travis.yml  CHANGES  Policy.md  README.md  cabal.config.7_4  cabal.config.7_6  cabal.haskell-ci  cabal.make-travis-yml  cabal.project  quickcheck-instances.cabal
.github/workflows/: haskell-ci.yml
bench/: ByteString.hs
src/Test/QuickCheck/: Instances.hs
src/Test/QuickCheck/Instances/: Aeson.hs  Array.hs  ByteString.hs  CaseInsensitive.hs  Containers.hs  CustomPrelude.hs  DataFix.hs  Hashable.hs  LegacyNumeric.hs  Natural.hs  OldTime.hs  Primitive.hs  Scientific.hs  Semigroup.hs  Solo.hs  Strict.hs  Tagged.hs  Text.hs  These.hs  Time.hs  Transformer.hs  UUID.hs  UnorderedContainers.hs  Vector.hs  Void.hs
src/Test/QuickCheck/Instances/Array/: Byte.hs
src/Test/QuickCheck/Instances/Text/: Short.hs
test/: Tests.hs
