Name:                quickcheck-instances
Version:             0.1
Synopsis:            Common quickcheck instances
Description:         QuickCheck instances.
                     .
                     The goal is to supply QuickCheck instances for
                     types provided by the Haskell Platform.

License:             BSD3
License-file:        LICENSE
Author:              Antoine Latter
Maintainer:          aslatter@gmail.com
Copyright:           Copyright Antoine Latter, 2012
Category:            Testing
Build-type:          Simple
-- Extra-source-files:  
Cabal-version:       >=1.6


Library
  -- Modules exported by the library.
  Exposed-modules:     Test.QuickCheck.Instances
  Hs-Source-Dirs:      src  
  Build-depends:       base < 5,

                       array >= 0.3 && < 0.5,
                       bytestring == 0.9.*,
                       containers >= 0.3 && < 0.5,
                       old-time >= 1.0 && < 1.2,
                       QuickCheck >= 2.1 && < 2.5,
                       text >= 0.7 && < 0.12,
                       time >= 1.1 && < 1.5
  
  -- Other-modules:       
  -- Build-tools:         
  
